tests/snapshots/workspace__tabs_80x24.snap
---
source: tests/workspace.rs
expression: "h.render(80, 24)"
---
 1 api ◌ 2 │ 2 svc │ 3 web 1                                             portal
 feature/upload · main                                     ● live · 2 to review
┌ Timeline ────────────────────────────────────────────────────────────────────┐
│▸◌ Uncommitted                                                  1 file  +1 -1 │
│ ● 76fdc51 Add queue                                                    +1    │
│ ● f7c97f0 Add upload                                                   +1    │
├──────────────────────────────────────────────────────────────────────────────┤
│ Σ Branch total                                                3 files  +3 -1 │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Files · Uncommitted ─────────────────────────────────────────────────────────┐
│▸  M  src/main.rs                                                       +1 -1 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 enter files · u next to review · r view all · w/b jump · < > repo · ? help
